# ecitygml-converter

./: Cargo.toml  README.md
crates/ecitygml-converter/: Cargo.toml  README.md
crates/ecitygml-converter-cli/: Cargo.toml  README.md
crates/ecitygml-converter-cli/src/: arguments.rs  cli.rs  error.rs  main.rs
crates/ecitygml-converter-cli/src/commands/: convert_to_graphics.rs  convert_to_rosbag.rs  convert_to_tiles.rs  convert_to_voxel.rs  extract_planes.rs  mod.rs
crates/ecitygml-converter-core/: Cargo.toml  README.md
crates/ecitygml-converter-core/src/: egraphics_deriver.rs  erosbag_deriver.rs  error.rs  evoxel_deriver.rs  lib.rs  to_egraphics.rs  to_erosbag.rs  triangulation.rs
crates/ecitygml-converter-io/: Cargo.toml  README.md
crates/ecitygml-converter-io/src/: error.rs  lib.rs
crates/ecitygml-converter-io/src/planes/: document.rs  mod.rs  write.rs  write_impl.rs
crates/ecitygml-converter/src/: lib.rs
