[package]
name = "ecitygml-converter-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO operations for converting CityGML data to other representations."


[dependencies]
ecitygml-converter-core = { version = "0.0.1-alpha.8", path = "../ecitygml-converter-core" }

ecoord = { workspace = true }
egml = { workspace = true }
ecitygml = { workspace = true }

thiserror = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }
zstd = { workspace = true }
