[package]
name = "ecitygml-converter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for converting CityGML datasets"


[dependencies]
ecitygml-converter-core = { version = "0.0.1-alpha.1", path = "../ecitygml-converter-core", registry = "custom"  }
