[package]
name = "ecitygml-converter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for converting CityGML data to other representations."


[dependencies]
ecitygml-converter-core = { version = "0.0.1-alpha.9", path = "../ecitygml-converter-core" }
ecitygml-converter-io = { version = "0.0.1-alpha.9", path = "../ecitygml-converter-io" }


[features]
default = ["rosbag", "voxel"]
rosbag = []
voxel = []
